fix: text .div-text-area .text resize on mobile, padding add

--- a/style.css
+++ b/style.css
@@ -158,12 +158,12 @@ header {
 .area .div-text-area {
   width: 100%;
   height: 100%;
-  margin: 0 5px;
 }
 
 .div-text-area .text {
   color: rgb(83, 83, 83);
   margin: 0 auto;
+  padding: 0 10px;
   overflow: hidden;
   min-width: 310px;
   max-width: 450px;
